<resources>
    <string name="app_name">PhotoFrameAlbum</string>
    <string name="Desc">My Loving Dear</string>
    <string name="button1"> Next  </string>
    <string name="button2">Previous</string>
    <string name="image1">image1</string>
    <string name="image2">image2</string>
    <string name="image3">image3</string>
    <string name="image4">image4</string>
    <string name="pageNumber">1</string>

</resources>