<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/Desc"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="550dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/pageNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/image1"
                android:padding="25sp"
                app:srcCompat="@drawable/img1"
                tools:ignore="NestedWeights" />
            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/image2"
                android:padding="25sp"
                app:srcCompat="@drawable/img2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/image3"
                android:padding="25sp"
                app:srcCompat="@drawable/img3"
                tools:ignore="NestedWeights,ImageContrastCheck" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/image4"
                android:padding="25sp"
                app:srcCompat="@drawable/img4" />

        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/next"
        android:layout_width="65dp"
        android:layout_height="51dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="48dp"
        android:contentDescription="@string/button1"
        android:onClick="next"
        android:src="@drawable/ic_baseline_skip_next_24"
        android:text="@string/button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UsingOnClickInXml" />

    <ImageButton
        android:id="@+id/previous"
        android:layout_width="65dp"
        android:layout_height="51dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="39dp"
        android:contentDescription="@string/button2"
        android:onClick="previous"
        android:src="@drawable/ic_baseline_skip_previous_24"
        android:text="@string/button1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/pageNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pageNumber"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next"
        app:layout_constraintStart_toEndOf="@+id/previous"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>